<resources>
    <string name="app_name">SportGest</string>
    <string name="app_db_name">SportGest.db</string>
    <string name="app_db_version">1</string>
    <string name="action_settings">Settings</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="delete_confirmation">Are you sure, you want to delete it?</string>
    <string name="delete_successful">Deleted Successfully</string>
    <string name="updated">Updated</string>
    <string name="not_updated">Not updated</string>
    <string name="inserted">Inserted</string>
    <string name="not_inserted">Not Inserted</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="done">Done</string>
    <string name="not_done">Not done</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="date">Date</string>
    <string name="event_category_button">Event Categories</string>
    <string name="event_category_add_menu">Add Category</string>
    <string name="event_category_edit_menu">Edit Category</string>
    <string name="event_category_save_menu">Save Category</string>
    <string name="event_category_delete_menu">Delete Category</string>
    <string name="exercise_button">Exercise</string>
    <string name="exercise_add_menu">Add Exercise</string>
    <string name="exercise_edit_menu">Edit Exercise</string>
    <string name="exercise_delete_menu">Delete Exercise</string>
    <string name="roles_button">Roles</string>
    <string name="role_add_menu">Add Role</string>
    <string name="role_edit_menu">Edit Role</string>
    <string name="role_delete_menu">Delete Role</string>
    <string name="category">Category</string>
    <string name="save_button">Save</string>
    <string name="next_button">Next</string>
    <string name="goTo_users_button">Manage Users</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="goTo_players_button">Manage Players</string>
    <string name="action_add_user">Create User</string>
    <string name="select_player">Select a Player</string>
    <string name="select_user">Select a user</string>
    <string name="app_newUser">New User</string>
    <string name="app_newTeam">New Team</string>
    <string name="app_eventcat">Event Categories</string>
    <string name="app_newPlayer">New Player</string>
    <string name="app_newPosition">New Position</string>
    <string name="action_del_user">Delete User</string>
    <string name="positive_answer">Yes</string>
    <string name="negative_answer">No</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Maecenas porttitor congue massa. Fusce posuere, magna sed pulvinar ultricies, purus lectus malesuada libero, sit amet commodo magna eros quis urna.
Nunc viverra imperdiet enim. Fusce est. Vivamus a tellus.
Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Proin pharetra nonummy pede. Mauris et orci.
Aenean nec lorem. In porttitor. Donec laoreet nonummy augue.
Suspendisse dui purus, scelerisque at, vulputate vitae, pretium mattis, nunc. Mauris eget neque at sem venenatis eleifend. Ut nonummy.
</string>
    <string name="exerciseDurationUnit">min</string>
    <string name="goTo_teams_button">Manage Teams</string>
    <string name="title_activity_login_">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_username">Username is invalid</string>
    <string name="error_invalid_password">Password is too short</string>
    <string name="error_mismatch_passwords">Passwords do not match</string>
    <string name="error_incorrect_password">Password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_login">Sign in</string>
    <string name="login_button">Login</string>
    <string name="prompt_username">Username</string>
    <string name="error_field_login">Invalid username or password</string>
    <string name="title_activity_login2">Sign in</string>
    <string name="userName">Name</string>
    <string name="userUsername">Username</string>
    <string name="userEmail">Email</string>
    <string name="userPassword">Password</string>
    <string name="userPasswordConfirmation">Password (confirmation)</string>
    <string name="hint_name">Name</string>
    <string name="err_user_name_empty">Name is empty</string>
    <string name="title_activity_create_role_">CreateRole_Activity</string>
    <string name="hint_permissions">Permissions</string>
    <string name="delete_unsuccessful">An error occurred with the deletion</string>
    <string name="role_add_successful">Role added successfully</string>
    <string name="role_add_unsuccessful">Role was not added</string>
    <string name="err_role_name">Role Name can\'t be empty</string>
    <string name="permissions_list_failed">Failed to get the Permissions list</string>
    <string name="err_role_name_exists">There is already a Role with this name</string>
    <string name="err_username_exists">There is already a User with this Username</string>
    <string name="role_save_successful">Role saved successfully</string>
    <string name="role_save_unsuccessful">Role was not saved</string>
    <string name="app_teamView">Teams</string>
    <string name="app_add_eventView">Add an Event Category</string>
    <string name="app_edit_eventView">Edit an Event Category</string>
    <string name="no_teams">There are no Teams</string>
    <string name="no_users">There are no Users</string>
    <string name="no_players">There are no Players</string>
    <string name="no_eventcategory">There are no Event Categories</string>
    <string name="save">Save</string>
    <string name="goTo_games_button">Manage Games</string>
    <string name="lineup">Lineup</string>
    <string name="number">\#</string>
    <string name="playerNickname">Nickname</string>
    <string name="playerName">Name</string>
    <string name="playerHeight">Height</string>
    <string name="playerWeight">Weight</string>
    <string name="playerAddress">Address</string>
    <string name="playerEmail">Email</string>
    <string name="playerNumber">Number</string>
    <string name="teamDescription">Description</string>
    <string name="teamSeason">Season</string>
    <string name="userRole">Role</string>
    <string name="playerNationality">Nationality</string>
    <string name="maritalstatus">Marital Status</string>
    <string name="playerBirthday">Birthday</string>
    <string name="playerGender">Gender</string>
    <string name="playerPreferredFoot">Preferred Foot</string>
    <string name="playerPosition">Position</string>
    <string name="userPasswordOriginal">Original Password</string>
    <string name="teamName">Name</string>
    <string name="err_password_match">Password do not match</string>
    <string name="err_name_short">Name is too short</string>
    <string name="err_username_short">Username is short</string>
    <string name="err_valid_email">Email is not valid</string>
    <string name="err_address_short">Address is short</string>
    <string name="err_number">Invalid number</string>
    <string name="err_description_short">Description is short</string>
    <string name="err_weight_invalid">Invalid weight</string>
    <string name="err_height_invalid">Invalid height</string>
    <string name="err_nickname_short">Nickname is short</string>
    <string name="err_season">Invalid Season</string>
    <string name="userTeam">Team</string>
    <string name="pickTeam">Choose a Team</string>
    <string name="pickRole">Choose a Role</string>
    <string name="action_save_user">Save User</string>
    <string name="user_save_unsuccessful">User was not saved</string>
    <string name="user_save_successful">User saved successfully</string>
    <string name="no_team">No Team</string>
    <string name="no_role">No Role</string>
    <string name="err_username_empty">Username is empty</string>
    <string name="error_occurred">An error occurred</string>
    <string name="goTo_gamesView_button">View Game</string>
    <string name="goTo_squadCall_button">Manage Squad</string>
    <string name="description_label"><b>Description</b></string>
    <string name="attributes_evaluated"><b>Evaluated attributes</b></string>
    <string name="exercise_name_label"><b>Name</b></string>
    <string name="duration_label"><b>Duration</b></string>
    <string name="goTo_exercise_button">Manage Exercises</string>
    <string name="goTo_training_button">Manage Trainings</string>
    <string name="goTo_attribute_button">Manage Attributes</string>
    <string name="goTo_eval_players">Evaluate Players</string>
    <string name="settings">Settings</string>
    <string name="app_newAttribute">New Attribute</string>
    <string name="app_updateAttribute">Update Attribute</string>
    <string name="app_newExercise">New Exercise</string>
    <string name="app_newTraining">New Training</string>
    <string name="training_name">Name</string>
    <string name="err_category_short">Category is short</string>
    <string name="err_event_category_short">Event Category is short</string>
    <string name="no_roles">There are no Roles</string>
    <string name="something_wrong">Something went wrong</string>
    <string name="err_position_short">Position is short</string>
    <string name="teamSquad">Squad</string>
    <string name="goTo_position_button">Manage Positions</string>
    <string name="goTo_gameModeView_button">Game Mode View</string>
    <string name="userPhoto">Photo</string>
    <string name="NoSelected_Role">Select a Role</string>
    <string name="NoSelected_User">Select a User</string>
    <string name="NoSelected_Team">Select a Team</string>
    <string name="NoSelected_Training">Select a Training</string>
    <string name="game_mode_add_eventcategory_failed">Failed to add the Event</string>
    <string name="game_mode_add_eventcategory_success">Event added successfully</string>
    <string name="NoSelected_Attribute">Select an Attribute</string>
    <string name="NoSelected_Player">Select a Player</string>
    <string name="NoSelected_Exercise">Select an Exercise</string>
    <string name="GameLocation">Game Location</string>
    <string name="GameDate">Game date</string>
    <string name="NoSelected_Date">Select a Date</string>
    <string name="HomeTeam">Home Team:</string>
    <string name="visitorTeam">Visitor Team:</string>
    <string name="HomeTeamN">Home Team</string>
    <string name="VisitorTeamN">Visitor Team</string>
    <string name="NoSelected_Hour">Select an Hour</string>
    <string name="no_games">There are no Games</string>
    <string name="players">Players</string>
    <string name="Lineup">Lineup</string>
    <string name="select_squad">Select a Squad</string>
    <string name="action_edit_HomeCallSquad">Home Squad</string>
    <string name="action_edit_VisitorCallSquad">Visitor Squad</string>
    <string name="Game_Report">Report</string>
    <string name="action_del_game">Delete game</string>
    <string name="action_save_game">Save game</string>
    <string name="changecolor">Change Color</string>
    <string name="hastimestamp">Has Timestamp</string>
    <string name="minutesAndseconds">Minutes and Seconds</string>
    <string name="action_gameMode">Game Mode</string>
    <string name="Other">Others</string>
    <string name="Training">Training</string>
    <string name="color">Color</string>
    <string name="count">Count</string>
</resources>