<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="studentcompany.sportgest.MainActivity">

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/event_category_button"
            android:id="@+id/event_category_button" />

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/goTo_teams_button"
                android:onClick="goTo_Teams"/>

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/goTo_players_button"
                android:onClick="goTo_Players"/>

        </android.support.v7.widget.LinearLayoutCompat >

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/goTo_users_button"
                android:onClick="goTo_Users"/>

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/roles_button"
                android:id="@+id/roles_button"/>

        </android.support.v7.widget.LinearLayoutCompat >

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/goTo_games_button"
                android:onClick="goTo_Games"/>

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/goTo_gamesView_button"
                android:onClick="goTo_Game_GeneralView"/>

        </android.support.v7.widget.LinearLayoutCompat>


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/goTo_squadCall_button"
            android:id="@+id/game_squadCall_button" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/exercise_button"
            android:id="@+id/exercise_button" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_button"
            android:onClick="goTo_Login" />


    </android.support.v7.widget.LinearLayoutCompat>
</RelativeLayout>

