<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Team.Squad_Activity_Edit"
    android:clickable="true">


    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.04" />



    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_create_squad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1">

            <TextView
                android:id="@+id/x"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/playerName"
                android:textSize="@dimen/text_size_default"
                android:text="@string/playerName" />

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/team_edit_squad_player_select"
                android:inputType="textNoSuggestions"
                android:hint="@string/hint_name"/>

        </LinearLayout>

    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <Button
            android:id="@+id/btnAddSelected"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_default"
            android:text="@string/add" />

        <Button
            android:id="@+id/btnRemoveSelected"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_default"
            android:text="@string/delete" />


    </LinearLayout>


    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.04" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/text_layout_Squad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/text_squad_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_permissions"
            android:textSize="@dimen/text_size_default"
            android:text="@string/teamSquad" />

    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp">

        <ListView
            android:id="@+id/team_edit_squad_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:choiceMode="singleChoice"
            android:listSelector="#666666"/>

    </LinearLayout>



</LinearLayout>