<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="50dp"
            android:paddingRight="50dp"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="150dp"
                android:src="@drawable/settings"
                android:layout_marginBottom="20dp"
                android:layout_gravity="center"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_default"
                android:text="@string/goTo_users_button"
                android:onClick="goTo_Users"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_default"
                android:text="@string/roles_button"
                android:id="@+id/roles_button"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/event_category_button"
                android:textSize="@dimen/text_size_default"
                android:id="@+id/event_category_button" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/goTo_position_button"
                android:id="@+id/positions_button"
                android:textSize="@dimen/text_size_default"
                android:onClick="goTo_Positions"/>


        </android.support.v7.widget.LinearLayoutCompat>

    </ScrollView>
</RelativeLayout>
